@@ -1,3 +1,8 @@
+2012-10-02  Janus Weil  <janus@gcc.gnu.org>
+
+	PR fortran/54778
+	* gfortran.dg/class_53.f90: New.
+
 2012-10-02  Alexandre Oliva <aoliva@redhat.com>
 
 	PR debug/54551
